add button remove

--- a/src/app/post-list-item/post-list-item.component.html
+++ b/src/app/post-list-item/post-list-item.component.html
@@ -11,6 +11,7 @@
   {{loveIts}}
   <button class="btn btn-success" (click)="onIncreaseLoveNumber()" > Love it ! </button>
   <button class="btn btn-danger" (click)="onDecreaseLoveNumber()"> Don't love it !</button>
+  <button type="button" class="pull-right btn btn-danger btn-remove"  (click)="onDelete(post)">Remove Post</button>
 
 
 </li>
