--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -9,8 +9,11 @@
                   [content]="post.content"
                   [date]="post.created_at | date: 'dd/MM/yyyy, hh:mm a'"
                   [loveIts]="post.loveIts"
-                  [index]="i">
+                  [index]="i"
+                  
+                  >
         </app-post-list-item>
+
       </ul>
     </div>
   </div>
